--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,14 @@ org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.16.5
 
-archives_base_name=multiblockmachine
-mod_version=1.0.0
+archives_base_name=MultiblockMachine
+mod_version=1.0.0-DEV
 maven_group=cn.leomc.multiblockmachine
 
-architectury_version=1.14.156
+architectury_version=1.20.28
 
 fabric_loader_version=0.11.3
 fabric_api_version=0.34.2+1.16
 
-forge_version=36.1.23
+forge_version=36.1.65
+mekanism_version=1.16.5-10.0.21.448
