--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -11,11 +11,22 @@ architectury {
     fabric()
 }
 
+repositories {
+    maven {
+        name = "Curse Maven"
+        url = "https://www.cursemaven.com/"
+    }
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
     // Remove the next line if you don't want to depend on the API
     modApi "me.shedaniel:architectury-fabric:${rootProject.architectury_version}"
+
+    modApi 'teamreborn:energy:0.1.1'
+    modImplementation 'teamreborn:energy:0.1.1'
+
 
     implementation(project(path: ":common")) {
         transitive = false
@@ -59,24 +70,4 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
-}
-
-publishing {
-    publications {
-        mavenFabric(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                classifier null
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-    }
 }
