--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 configurations {
-    shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
+    shadowCommon
 }
 
 architectury {
@@ -15,10 +15,19 @@ loom {
     useFabricMixin = true
 }
 
+repositories {
+    maven { url 'https://modmaven.dev/' }
+}
+
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
     // Remove the next line if you don't want to depend on the API
     modApi "me.shedaniel:architectury-forge:${rootProject.architectury_version}"
+
+    modRuntime "mekanism:Mekanism:${rootProject.mekanism_version}"
+    modRuntime "mekanism:Mekanism:${rootProject.mekanism_version}:additions"
+    modRuntime "mekanism:Mekanism:${rootProject.mekanism_version}:generators"
+    modRuntime "mekanism:Mekanism:${rootProject.mekanism_version}:tools"
 
     implementation(project(path: ":common")) {
         transitive = false
@@ -64,24 +73,4 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
-}
-
-publishing {
-    publications {
-        mavenForge(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                classifier null
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-    }
 }
